<resources>
    <string name="app_name">Simple Online Dating</string>

    <!-- Strings related to Facebook Login API -->
    <string name="facebook_app_id">391368011285147</string>
    <string name="fb_login_protocol_scheme">fb391368011285147</string>

    <!-- Strings related to Main Activity -->
    <string name="logoContentDescription">Logo of the app</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithPhoneNumber">Login with phone number</string>


    <!--  -->
    <string name="title_activity_login_with_facebook">Log In With Facebook</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fbProfilePicDes">Your Facbook Avatar</string>
    <string name="fbAvatarDes">Your Facebook Avatar</string>
    <string name="continueFacebook">Continue with your Facebook account?</string>
    <string name="labelName">Name</string>
    <string name="labelGender">Gender</string>
    <string name="labelGenderMale">Male</string>
    <string name="labelGenderFemale">Female</string>
    <string name="labelGenderOther">Other</string>
    <string name="labelBirthday">Date of birth</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="labelInterest">Interesting in</string>
    <string name="labelAgeRange">With the age between</string>
    <string name="labelAgeRangeAnd">and</string>
    <string name="labelMaxDistance">Maximum distance from you (in km)</string>
    <string name="labelButtonSubmit">Submit</string>
    <string name="labelButtonSettings">Settings</string>
    <string name="labelButtonSave">Save changes</string>
</resources>
