<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFillInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.lawrence.nmcnpm.FillIInfoActivity">


    <RelativeLayout
        android:id="@+id/FillInfo_layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:elevation="2dp"
        android:background="@drawable/shadow_background">

        <TextView
            android:id="@+id/FillInfo_textviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelName" />

        <EditText
            android:id="@+id/FillInfo_edittextName"
            android:labelFor="@+id/FillInfo_edittextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/FillInfo_textviewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelGender" />

        <RadioGroup
            android:id="@+id/FillInfo_RadGpGenderChosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="75dp"
            >

            <RadioButton
                android:id="@+id/FillInfo_RadButMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderMale" />

            <RadioButton
                android:id="@+id/FillInfo_RadButMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderFemale" />

            <RadioButton
                android:id="@+id/FillInfo_RadButMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderOther" />
        </RadioGroup>

        <TextView
            android:id="@+id/FillInfo_textviewBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelBirthday" />

        <EditText
            android:id="@+id/FillInfo_edittextDate"
            android:labelFor="@+id/FillInfo_edittextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:text="@string/dateFormat"
            android:layout_marginStart="110dp"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelInterest"/>

        <RadioGroup
            android:id="@+id/FillInfo_Interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="185dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FillInfo_RadButMale_Int"
                android:text="@string/labelGenderMale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FillInfo_RadButFemale_Int"
                android:text="@string/labelGenderFemale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FillInfo_RadButOther_Int"
                android:text="@string/labelGenderOther" />
        </RadioGroup>

        <TextView
            android:id="@+id/FillInfo_textviewAgeRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelAgeRange"
            android:layout_marginTop="245dp"
            />

        <EditText
            android:id="@+id/FillInfo_edittextLeftRange"
            android:labelFor="@+id/FillInfo_edittextLeftRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="225dp"
            android:ems="2"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/FillInfo_textviewAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelAgeRangeAnd"
            android:layout_marginTop="245dp"
            />

        <EditText
            android:id="@+id/FillInfo_edittextRightRange"
            android:labelFor="@+id/FillInfo_edittextRightRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="225dp"
            android:ems="2"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/FillInfo_textviewMaxDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelMaxDistance"
            android:layout_marginTop="300dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/FillInfo_edittextMaxDist"
            android:labelFor="@+id/FillInfo_edittextMaxDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginStart="255dp"
            android:inputType="number"
            android:ems="2"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/buttonSubmitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:text="@string/labelButtonSubmit"/>

</android.widget.RelativeLayout>
