<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.lawrence.nmcnpm.AccountSettingActivity">

    <RelativeLayout
        android:id="@+id/AccountSettings_layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:elevation="2dp"
        android:background="@drawable/shadow_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="350dp"
            android:background="@drawable/shadow_background"
            android:elevation="2dp"
            >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:id="@+id/AccountSettings_imageviewAvatar"
            android:src="@drawable/yoshino"
            android:background="#FFFFFF"
            />
        </RelativeLayout>

        <TextView
            android:id="@+id/AccountSettings_textviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelName" />

        <EditText
            android:id="@+id/AccountSettings_edittextName"
            android:labelFor="@+id/AccountSettings_edittextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/AccountSettings_textviewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="145dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelGender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="140dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderMale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderFemale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderOther" />
        </RadioGroup>

        <TextView
            android:id="@+id/AccountSettings_textviewBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelBirthday" />

        <EditText
            android:id="@+id/AccountSettings_edittextDate"
            android:labelFor="@+id/AccountSettings_edittextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/dateFormat"
            android:layout_marginStart="110dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/AccountSettings_textviewInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelInterest"/>

        <RadioGroup
            android:id="@+id/AccountSettings_Interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="250dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderMale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderFemale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenderOther" />
        </RadioGroup>

        <TextView
            android:id="@+id/AccountSettings_textviewAgeRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelAgeRange"
            android:layout_marginTop="310dp"
            />

        <EditText
            android:id="@+id/AccountSettings_edittextLeftRange"
            android:labelFor="@+id/AccountSettings_edittextLeftRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="290dp"
            android:ems="2"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/AccountSettings_textviewAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/labelAgeRangeAnd"
            android:layout_marginTop="310dp"
            />

        <EditText
            android:id="@+id/AccountSettings_edittextRightRange"
            android:labelFor="@+id/AccountSettings_edittextRightRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="290dp"
            android:ems="2"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/AccountSettings_textviewMaxDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelMaxDistance"
            android:layout_marginTop="365dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/AccountSettings_edittextMaxDist"
            android:labelFor="@+id/AccountSettings_edittextMaxDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="345dp"
            android:layout_marginStart="255dp"
            android:inputType="number"
            android:ems="2"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/AccountSettings_buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_centerHorizontal="true"
        android:text="@string/labelButtonSave"/>

</android.widget.RelativeLayout>
